Project.toml Stanford email

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
 name = "Snake"
 uuid = "af688983-2b6d-40fa-a2f6-00f5fef758ee"
-authors = ["Robert Moss <rmoss92@gmail.com>"]
+authors = ["Robert Moss <mossr@cs.stanford.edu>"]
 version = "0.1.0"
