--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "Snake"
 uuid = "af688983-2b6d-40fa-a2f6-00f5fef758ee"
 authors = ["Robert Moss <mossr@cs.stanford.edu>"]
 version = "0.1.0"
+
+[compat]
+julia "1"
